[tool.poetry]
name = "juster-dipdup"
version = "0.0.1"
description = ""
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
packages = [
    { include = "juster", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "6.0.0rc2"
# dipdup = {path = "../dipdup", develop = true}
# dipdup = {git = "https://github.com/dipdup-net/dipdup-py.git", branch = "feat/db-rollback"}
strict-rfc3339 = "^0.7"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
diff-cover = "^6.5.0"
flake8-return = "^1.1.3"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.1.11"
flake8-simplify = "^0.19.2"
flakeheaven = "^1.0.1"
isort = "^5.9.3"
mypy = "^0.960"

[tool.isort]
line_length = 140
force_single_line = true

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.flakeheaven]
format = "colored"
max_line_length = 140
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
"*" = ["+*"]
flake8-comprehensions = ["-C417"]
flake8-docstrings = ["-*"]
flake8-simplify = ["-SIM106", "-SIM114", "-SIM102"]
pycodestyle = ["-*"]

[build-system]
requires = ["poetry_core==1.0.0"]
build-backend = "poetry.core.masonry.api"
