[tool.poetry]
name = "juster-dipdup"
version = "1.0.0"
description = "DipDup indexer for Juster protocol"
authors = [
    "Lev Gorodetskiy <dipdup@drsr.io>",
    "Stepan Naumov <ztepler@gmail.com>",
    "Michael Zaikin <mz@baking-bad.org>"
]
packages = [
    { include = "juster", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^6"
strict-rfc3339 = "^0.7"

[tool.poetry.dev-dependencies]
isort = "*"
black = "*"
ruff = "*"
mypy = "*"

[tool.isort]
line_length = 140
force_single_line = true

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 140
target-version = 'py310'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
